--- a/.config
+++ b/.config
@@ -2454,7 +2454,7 @@ CONFIG_PACKAGE_wpad-mini=y
 #
 # Ralink
 #
-# CONFIG_PACKAGE_ralink-wifi-mt7688 is not set
+CONFIG_PACKAGE_ralink-wifi-mt7688=y
 
 #
 # Utilities
@@ -2527,7 +2527,7 @@ CONFIG_PACKAGE_libjson-script=y
 # CONFIG_PACKAGE_look is not set
 # CONFIG_PACKAGE_losetup is not set
 # CONFIG_PACKAGE_luciipk is not set
-# CONFIG_PACKAGE_maccalc is not set
+CONFIG_PACKAGE_maccalc=y
 # CONFIG_PACKAGE_mcookie is not set
 # CONFIG_PACKAGE_mdadm is not set
 # CONFIG_PACKAGE_mount-utils is not set
